Fixed various bugs
Took 1 hour 0 minutes